--- a/app/src/main/res/layout/fragment_street_art_detail.xml
+++ b/app/src/main/res/layout/fragment_street_art_detail.xml
@@ -82,4 +82,15 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginLeft="8dp" />
+
+    <Button
+        android:id="@+id/btn_favourite_streetart"
+        android:layout_width="36dp"
+        android:layout_height="36dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/ic_favorite_border_black_36dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:focusable="false" />
 </android.support.constraint.ConstraintLayout>
